19testcases scans task details

--- a/test-output/ExtentReport.html
+++ b/test-output/ExtentReport.html
@@ -49,7 +49,7 @@
 		<!-- nav-right -->
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<a href='#!'>
-			<span class='label blue darken-3 suite-start-time'>Dec 14, 2023 04:22:39 PM</span>
+			<span class='label blue darken-3 suite-start-time'>Dec 27, 2023 04:25:09 PM</span>
 			</a>
 		</ul>
 	</div>
@@ -137,7 +137,7 @@
                 </div>
                 <div class='block text-small'>
                     <span class='tooltipped' data-position='top' data-tooltip='100%'>
-                    <span class='strong'>2</span> steps passed</span>
+                    <span class='strong'>1</span> steps passed</span>
                 </div>
                 <div class='block text-small'>
                     <span class='strong tooltipped' data-position='top' data-tooltip='0%'>
@@ -167,14 +167,14 @@
 				<li class='test displayed active has-leaf pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
 						<span class='test-name'>logintoApplication</span>
-						<span class='test-time'>Dec 14, 2023 04:22:48 PM</span>
+						<span class='test-time'>Dec 27, 2023 04:25:17 PM</span>
 						<span class='test-status right pass'>Pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Dec 14, 2023 04:22:48 PM</span>
-	<span class='label end-time'>Dec 14, 2023 04:23:01 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>00 00 13.464</span>
+	<span class='label start-time'>Dec 27, 2023 04:25:17 PM</span>
+	<span class='label end-time'>Dec 27, 2023 04:25:30 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>00 00 12.636</span>
 </div>
 <div class='test-attributes'>
 	<div class='category-list'>
@@ -193,7 +193,7 @@
 		<tbody>
 			<tr class='log' status='pass'>			
 				<td class='status pass' title='Pass' alt='Pass'><i class='material-icons'> check_circle </i></td>
-				<td class='timestamp'>4:23:01 PM</td>
+				<td class='timestamp'>4:25:30 PM</td>
 				<td class='step-details'>
 						Test passed
 				</td>
@@ -206,9 +206,9 @@
 	<li class='node level-1 leaf pass' status='Pass' test-id='2'>
 		<div class='collapsible-header'>
 			<div class='node-name'>Punith</div>
-			<span class='node-time label start-time'>Dec 14, 2023 04:22:48 PM</span>
-			<span class='node-time label end-time'>Dec 14, 2023 04:22:48 PM</span>
-			<span class='node-duration label time-taken grey lighten-1 white-text'>00 00 00.003</span>
+			<span class='node-time label start-time'>Dec 27, 2023 04:25:17 PM</span>
+			<span class='node-time label end-time'>Dec 27, 2023 04:25:17 PM</span>
+			<span class='node-duration label time-taken grey lighten-1 white-text'>00 00 00.005</span>
 			<span class='test-status right pass'>Pass</span>
 			<div class='category-list'>
 				<span class='category label'>Punith</span>
@@ -227,7 +227,7 @@
 					<tbody>
 						<tr class='log' status='Info'>
 							<td class='status info' title='Info' alt='Info'><i class='material-icons'>info_outline</i></td>
-							<td class='timestamp'>4:22:48 PM</td>
+							<td class='timestamp'>4:25:17 PM</td>
 							<td class='step-details'>
 									<table class='markup-table table '><tr><td>Browser</td><td></td></tr></table>
 							</td>
@@ -240,22 +240,17 @@
 </ul>
 					</div>
 				</li>
-				<li class='test displayed active has-leaf pass' status='pass' bdd='false' test-id='3'>
+				<li class='test displayed active  pass' status='pass' bdd='false' test-id='3'>
 					<div class='test-heading'>
-						<span class='test-name'>upload_emptyfile</span>
-						<span class='test-time'>Dec 14, 2023 04:23:01 PM</span>
+						<span class='test-name'>pagination</span>
+						<span class='test-time'>Dec 27, 2023 04:25:30 PM</span>
 						<span class='test-status right pass'>Pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Dec 14, 2023 04:23:01 PM</span>
-	<span class='label end-time'>Dec 14, 2023 04:23:18 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>00 00 17.482</span>
-</div>
-<div class='test-attributes'>
-	<div class='category-list'>
-		<span class='category label'>Punith</span>
-	</div>
+	<span class='label start-time'>Dec 27, 2023 04:25:30 PM</span>
+	<span class='label end-time'>Dec 27, 2023 04:25:36 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>00 00 06.093</span>
 </div>
 <div class='test-steps'>
 	<table class='bordered table-results'>
@@ -269,7 +264,7 @@
 		<tbody>
 			<tr class='log' status='pass'>			
 				<td class='status pass' title='Pass' alt='Pass'><i class='material-icons'> check_circle </i></td>
-				<td class='timestamp'>4:23:18 PM</td>
+				<td class='timestamp'>4:25:36 PM</td>
 				<td class='step-details'>
 						Test passed
 				</td>
@@ -278,42 +273,6 @@
 	</table>
 </div>
 
-<ul class='collapsible node-list' data-collapsible='accordion'>
-	<li class='node level-1 leaf pass' status='Pass' test-id='4'>
-		<div class='collapsible-header'>
-			<div class='node-name'>Punith</div>
-			<span class='node-time label start-time'>Dec 14, 2023 04:23:01 PM</span>
-			<span class='node-time label end-time'>Dec 14, 2023 04:23:01 PM</span>
-			<span class='node-duration label time-taken grey lighten-1 white-text'>00 00 00.000</span>
-			<span class='test-status right pass'>Pass</span>
-			<div class='category-list'>
-				<span class='category label'>Punith</span>
-			</div>
-		</div>
-		<div class='collapsible-body'>
-			<div class='node-steps'>
-				<table class='bordered table-results'>
-					<thead>
-						<tr>
-							<th>Status</th>
-							<th>Timestamp</th>
-							<th>Details</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr class='log' status='Info'>
-							<td class='status info' title='Info' alt='Info'><i class='material-icons'>info_outline</i></td>
-							<td class='timestamp'>4:23:01 PM</td>
-							<td class='step-details'>
-									<table class='markup-table table '><tr><td>Browser</td><td></td></tr></table>
-							</td>
-						</tr>
-					</tbody>
-				</table>
-			</div>
-		</div>
-	</li>
-</ul>
 					</div>
 				</li>
 			</ul>
@@ -360,12 +319,12 @@
 					<div class='category-heading'>
 						<span class='category-name'>Punith</span>
 						<span class='category-status right'>
-						<span class='label pass'>2</span>
+						<span class='label pass'>1</span>
 						</span>
 					</div>
 					<div class='category-content hide'>
 						<div class='category-status-counts'>
-							<span status="pass" class='label green accent-4 white-text'>Passed: 2</span>
+							<span status="pass" class='label green accent-4 white-text'>Passed: 1</span>
 							
 							
 						</div>
@@ -380,13 +339,8 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td>Dec 14, 2023 04:22:48 PM</td>
+										<td>Dec 27, 2023 04:25:17 PM</td>
 										<td class='linked' test-id='1'>logintoApplication</td>
-										<td><span class='test-status Pass'>Pass</span></td>
-									</tr>
-									<tr>
-										<td>Dec 14, 2023 04:23:01 PM</td>
-										<td class='linked' test-id='3'>upload_emptyfile</td>
 										<td><span class='test-status Pass'>Pass</span></td>
 									</tr>
 								</tbody>
@@ -417,25 +371,25 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Steps
-					<div class='panel-lead'>2</div>
+					<div class='panel-lead'>1</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Dec 14, 2023 04:22:39 PM</div>
+					<div class='panel-lead'>Dec 27, 2023 04:25:09 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Dec 14, 2023 04:23:19 PM</div>
+			 		<div class='panel-lead'>Dec 27, 2023 04:25:36 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>00 00 39.096</div>
+					<div class='panel-lead'>00 00 26.445</div>
 				</div>
 			</div>
 			<div class='col s6'>
@@ -452,7 +406,7 @@
 						</tr>
 						<tr>
 							<td>Punith</td>
-							<td>2</td>
+							<td>1</td>
 							<td>0</td>
 							<td>0</td>
 							<td>
@@ -477,8 +431,8 @@
 				errorParent: 0,
 				warningParent: 0,
 				skipParent: 0,
-				childCount: 2,
-				passChild: 2,
+				childCount: 1,
+				passChild: 1,
 				failChild: 0,
 				fatalChild: 0,
 				errorChild: 0,
@@ -498,7 +452,7 @@
 		
 		<script>
 			var timeline = {
-			        "logintoApplication":13.464,"upload_emptyfile":17.482
+			        "logintoApplication":12.636,"pagination":6.093
 			};
 		</script>
 		
