--- a/test-output/ExtentSparkReport.html
+++ b/test-output/ExtentSparkReport.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary"></span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Dec 14, 2023 04:22:39 PM</span></a>
+<a href="#"><span class="badge badge-primary">Dec 27, 2023 04:25:09 PM</span></a>
 </li>
 </ul>
 </div>
@@ -92,7 +92,7 @@
           <div class="test-detail">
             <p class="name">logintoApplication</p>
             <p class="text-sm">
-              <span>4:22:48 PM</span> / <span>00:00:13:464</span>
+              <span>4:25:17 PM</span> / <span>00:00:12:636</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -101,9 +101,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">logintoApplication</h5>
-<span class='badge badge-success'>12.14.2023 4:22:48 PM</span>
-<span class='badge badge-danger'>12.14.2023 4:23:01 PM</span>
-<span class='badge badge-default'>00:00:13:464</span>
+<span class='badge badge-success'>12.27.2023 4:25:17 PM</span>
+<span class='badge badge-danger'>12.27.2023 4:25:30 PM</span>
+<span class='badge badge-default'>00:00:12:636</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -117,7 +117,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>4:23:01 PM</td>
+        <td>4:25:30 PM</td>
         <td>
           Test passed
         </td>
@@ -131,7 +131,7 @@
           <div class="card-toolbar node-info">
             <ul class="list-inline d-none d-sm-block">
               <li><span class="badge pass-bg log ">Pass</span></li>
-              <li><span class='badge badge-default'>30:00:003</span></li>
+              <li><span class='badge badge-default'>30:00:005</span></li>
               <li></li>
             </ul>
           </div>
@@ -149,7 +149,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>4:22:48 PM</td>
+        <td>4:25:17 PM</td>
         <td>
           <table class='markup-table table '><tr><td>Browser</td><td></td></tr></table>
         </td>
@@ -165,12 +165,12 @@
         </li>
         <li class="test-item"  status="pass" test-id="3"
           author=""
-          tag="Punith"
+          tag=""
           device="">
           <div class="test-detail">
-            <p class="name">upload_emptyfile</p>
+            <p class="name">pagination</p>
             <p class="text-sm">
-              <span>4:23:01 PM</span> / <span>00:00:17:482</span>
+              <span>4:25:30 PM</span> / <span>00:00:06:093</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -178,16 +178,15 @@
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">upload_emptyfile</h5>
-<span class='badge badge-success'>12.14.2023 4:23:01 PM</span>
-<span class='badge badge-danger'>12.14.2023 4:23:18 PM</span>
-<span class='badge badge-default'>00:00:17:482</span>
+<h5 class="test-status text-pass">pagination</h5>
+<span class='badge badge-success'>12.27.2023 4:25:30 PM</span>
+<span class='badge badge-danger'>12.27.2023 4:25:36 PM</span>
+<span class='badge badge-default'>00:00:06:093</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
 <span title='Expand all nodes' class='badge badge-default pointer float-right et'><i class="fa fa-expand"></i></span>
 </div>
-<div class="m-t-15"><span class="badge badge-pill badge-default">Punith</span></div>
 </div>
 </div><div class="detail-body mt-4">
 <table class="table table-sm">
@@ -195,49 +194,13 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>4:23:18 PM</td>
+        <td>4:25:36 PM</td>
         <td>
           Test passed
         </td>
       </tr>
   </tbody>
 </table>
-</div>
-  <div class="mt-4">  <div class="accordion" role="tablist">
-      <div class="card">
-        <div class="card-header">
-          <div class="card-toolbar node-info">
-            <ul class="list-inline d-none d-sm-block">
-              <li><span class="badge pass-bg log ">Pass</span></li>
-              <li><span class='badge badge-default'>30:00:000</span></li>
-              <li></li>
-            </ul>
-          </div>
-          <div class="card-title">
-            <a class="node " id="4"><span>Punith</span></a>
-            <div class="node-attr">
-<span class="badge badge-pill badge-default">Punith</span>            </div>
-          </div>
-        </div>
-        <div class="collapse">
-          <div class="card-body">
-            
-<table class="table table-sm">
-  <thead><tr><th class="status-col">Status</th><th class="timestamp-col">Timestamp</th><th class="details-col">Details</th></tr></thead>
-  <tbody>
-      <tr class="event-row">
-        <td><span class="badge log info-bg">Info</span></td>
-        <td>4:23:01 PM</td>
-        <td>
-          <table class='markup-table table '><tr><td>Browser</td><td></td></tr></table>
-        </td>
-      </tr>
-  </tbody>
-</table>
-          </div>
-        </div>
-      </div>
-  </div>
 </div>
           </div>
         </li>
@@ -261,15 +224,15 @@
 <li class="test-item">
 <div class="test-detail">
 <span class="meta">
-<span class='badge log pass-bg'>2</span>
+<span class='badge log pass-bg'>1</span>
 </span>
 <p class="name">Punith</p>
-<p class="duration text-sm">2 tests</p>
+<p class="duration text-sm">1 tests</p>
 </div>
 <div class="test-contents d-none">
 <div class="info">
 <h4>Punith</h4>
-<span status="pass" class='badge log pass-bg'>2 passed</span>
+<span status="pass" class='badge log pass-bg'>1 passed</span>
 </div>
 <table class='table table-sm mt-4'>
 <thead>
@@ -282,16 +245,9 @@
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>16:22:48 PM</td>
+<td>16:25:17 PM</td>
 <td>
 <a href="#" class="linked" test-id='1' id='1'>logintoApplication</a>
-</td>
-</tr>
-<tr class="tag-test-status" status="pass">
-<td><span class="badge log pass-bg">Pass</span></td>
-<td>16:23:01 PM</td>
-<td>
-<a href="#" class="linked" test-id='3' id='3'>upload_emptyfile</a>
 </td>
 </tr>
 </tbody>
@@ -311,13 +267,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Dec 14, 2023 04:22:39 PM</h3>
+<h3>Dec 27, 2023 04:25:09 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Dec 14, 2023 04:23:19 PM</h3>
+<h3>Dec 27, 2023 04:25:36 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -368,7 +324,7 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='100%'><b>2</b> steps passed</small></div>
+<div><small data-tooltip='100%'><b>1</b> steps passed</small></div>
 <div>
 <small data-tooltip='0%'><b>0</b> steps failed,
 <b>0</b> skipped, <b data-tooltip='%'>0</b> others
@@ -388,10 +344,10 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='50%'><b>2</b> events passed</small></div>
+<div><small data-tooltip='66%'><b>2</b> events passed</small></div>
 <div>
 <small data-tooltip='0%'><b>0</b> events failed,
-<b data-tooltip='%'>2</b> others
+<b data-tooltip='%'>1</b> others
 </small>
 </div>
 </div>
@@ -407,7 +363,7 @@
 </div></div>
 <script>
 var timeline = {
-"logintoApplication":13.464,"upload_emptyfile":17.482
+"logintoApplication":12.636,"pagination":6.093
 };
 </script>
 <div class="row">
@@ -418,7 +374,7 @@ var timeline = {
 <thead><tr class="bg-gray"><th>Name</th><th>Passed</th><th>Failed</th><th>Skipped</th><th>Others</th><th>Passed %</th></tr></thead><tbody>
 <tr>
 <td>Punith</td>
-<td>2</td>
+<td>1</td>
 <td>0</td>
 <td>0</td>
 <td>0</td>
@@ -438,7 +394,7 @@ failParent: 0,
 warningParent: 0,
 skipParent: 0,
 childCount: 5,
-passChild: 2,
+passChild: 1,
 failChild: 0,
 warningChild: 0,
 skipChild: 0,
@@ -454,7 +410,7 @@ passEvents: 2,
 failEvents: 0,
 warningEvents: 0,
 skipEvents: 0,
-infoEvents: 2
+infoEvents: 1
 };
 </script>        </div>
       </div>
